# mh-optimizacion-turnos

./: .gitignore  README.md  example.py  pyproject.toml  turno_optimizer_interactive.ipynb
mh_optimizacion_turnos/: __init__.py
mh_optimizacion_turnos/application/ports/input/: algorithm_visualization_port.py  shift_assignment_service_port.py  test_data_setup_port.py
mh_optimizacion_turnos/application/ports/output/: schedule_export_port.py
mh_optimizacion_turnos/application/usecases/: algorithm_comparison_usecase.py  setup_test_data_usecase.py
mh_optimizacion_turnos/domain/models/: assignment.py  day.py  employee.py  shift.py  skill.py  solution.py
mh_optimizacion_turnos/domain/repositories/: employee_repository.py  shift_repository.py
mh_optimizacion_turnos/domain/services/: optimizer_strategy.py  shift_optimizer_service.py  solution_validator.py
mh_optimizacion_turnos/domain/services/optimizers/: genetic_algorithm_optimizer.py  grasp_optimizer.py  tabu_search_optimizer.py
mh_optimizacion_turnos/domain/value_objects/: __init__.py  algorithm_type.py  day.py  export_format.py  shift_type.py  skill.py
mh_optimizacion_turnos/infrastructure/adapters/input/: cli_interface_adapter.py  shift_assignment_service_adapter.py
mh_optimizacion_turnos/infrastructure/adapters/output/: schedule_export_adapter.py  visualization_adapter.py
mh_optimizacion_turnos/infrastructure/repositories/: in_memory_employee_repository.py  in_memory_shift_repository.py
