[tool.poetry]
name = "mh-optimizacion-turnos"
version = "0.1.0"
description = ""
authors = ["Armando Alexis Sepúlveda Cruz <armando.sepulvedacrz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
