[tool.poetry]
name = "mh-optimizacion-turnos"
version = "0.1.0"
description = ""
authors = ["Armando Alexis Sepúlveda Cruz <armando.sepulvedacrz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
numpy = "^2.2.4"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
mermaid-py = "^0.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
